--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-absl-py==0.9.0
+absl-py
 astor==0.8.1
 bleach==3.1.5
 bottle==0.12.18
@@ -32,3 +32,4 @@ tensorflow-cpu==2.17.0
 termcolor==1.1.0
 urllib3==1.26.5
 Werkzeug==2.0.0
+
