--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ Markdown==3.2.2
 MarkupSafe==2.0
 numpy
 oauthlib==3.1.0
-pillow==7.2.0
+pillow
 protobuf==3.12.4
 PyYAML==5.4.1
 python-dotenv==0.14.0
@@ -32,3 +32,4 @@ tensorflow-cpu==2.17.0
 termcolor==1.1.0
 urllib3==1.26.5
 Werkzeug==2.0.0
+
