--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--upgrade pip
 absl-py
 astor==0.8.1
 bleach==3.1.5
@@ -32,5 +33,6 @@ tensorflow-cpu
 termcolor==1.1.0
 urllib3==1.26.5
 Werkzeug==2.0.0
+
 
 
